--- a/src/Santander.SQL.IServices/Santander.SQL.IServices.csproj
+++ b/src/Santander.SQL.IServices/Santander.SQL.IServices.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAccountOperationService.cs" />
+    <Compile Include="IOperationTypeService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
